--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,16 @@
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
-  "keywords": ["telegram bot", "crm", "online shopping", "delivery"],
+  "keywords": [
+    "telegram bot",
+    "crm",
+    "online shopping",
+    "delivery"
+  ],
   "author": "akbarjondev",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
