--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "akbarjondev",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
