--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "socket.io": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
